--- a/practice.html
+++ b/practice.html
@@ -114,6 +114,7 @@
         $('#year').text(new Date().getFullYear());
     </script>
     <script src="js/main.js"></script>
+    <script src="js/scrollDown.js"></script>
 </body>
 
 </html>
