--- a/project-single.html
+++ b/project-single.html
@@ -47,7 +47,9 @@
 
         <div class="showcase">
             <img src="img/Gatehouse School Images/Photos/GatehouseSchool_04.jpg" alt="">
-            <h2 class="title">Gatehouse School <a href="#container-single"><i class="fas fa-chevron-down"></i></a></h2>
+            <a href="#container-single">
+                <h2 class="title">Gatehouse School</h2>
+            </a>
         </div>
 
         <div class="container-single" id="container-single">
@@ -234,6 +236,7 @@
     <script src="http://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
 
     <script src="js/main.js"></script>
+    <script src="js/scrollDown.js"></script>
 </body>
 
 </html>
