--- a/projects.html
+++ b/projects.html
@@ -55,7 +55,7 @@
                     <a href="project-single.html">
                         <h2>Gatehouse School</h2>
                     </a>
-                    <h3>2015 - 2018</h3>
+                    <h3>Sector</h3>
                 </div>
             </div>
 
@@ -66,7 +66,7 @@
                 </div>
                 <div class="col-sm-4 proj-desc left">
                     <h2>Flat Building</h2>
-                    <h3>2014 - 2016</h3>
+                    <h3>Sector</h3>
                 </div>
             </div>
 
@@ -76,7 +76,7 @@
                 </div>
                 <div class="col-sm-4 proj-desc">
                     <h2>Office</h2>
-                    <h3>2012 - 2016</h3>
+                    <h3>Sector</h3>
                 </div>
             </div>
         </div>
