lining up, fonts

--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
                     <a href="people.html">
                         <li class="nav-item">People</li>
                     </a>
-                    <a href="contact.html">
+                    <a href="contact.html" style="font-style: italic;">
                         <li class="nav-item">Contact</li>
                     </a>
                 </ul>
@@ -54,7 +54,7 @@
             <div class="contact-info">
                 <div class="contact-address">
                     <h2>Architects<br>In Practice</h2>
-                    <h3>1 Green Bank Studio, London, E1W<br>+44 7388 XXXXX</h3>
+                    <h3>1 Green Bank Studio, London, E1W<br>+44 (0)20 7XX XXXX</h3>
                     <h5>ARCHITECTS IN PRACTICE LTD Registered in England No. 12463381
                     </h5>
                     <h5>&copy; 2020, ARCHITECTS IN PRACTICE, All Rights Reserved</h5>
