--- a/people.html
+++ b/people.html
@@ -33,7 +33,7 @@
                     <a href="practice.html">
                         <li class="nav-item">Practice</li>
                     </a>
-                    <a href="people.html">
+                    <a href="people.html" style="font-style: italic;">
                         <li class="nav-item">People</li>
                     </a>
                     <a href="contact.html">
