--- a/project-single.html
+++ b/project-single.html
@@ -15,7 +15,7 @@
 
 <body>
 
-    <div class="single-page">
+    <div class="single-page" id="single-page">
         <header class="navbar navbar-expand-sm navbar-light fixed-top">
             <a href="index.html" class="navbar-brand">
                 <h1 class="header-brand">Architects<br>In Practice</h1>
@@ -27,7 +27,7 @@
 
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="header-nav navbar-nav">
-                    <a href="projects.html">
+                    <a href="projects.html" style="font-style: italic;">
                         <li class="nav-item">Projects</li>
                     </a>
                     <a href="practice.html">
@@ -52,7 +52,7 @@
             </a>
         </div>
 
-        <div class="container-single" id="container-single">
+        <div class="container" id="container-single">
 
             <div class="single-title">
                 <h2>Gatehouse School</h2>
@@ -172,27 +172,27 @@
                 <img src="img/Gatehouse School Images/Drawings/1_LocationPlan.jpg" alt="">
             </div>
 
-            <div class="single-auto-plan img-mb">
+            <div class="single-full-img img-mb">
                 <img src="img/Gatehouse School Images/Drawings/2_FloorPlan_Ground.jpg" alt="">
             </div>
 
-            <div class="single-auto-plan img-mb">
+            <div class="single-full-img img-mb">
                 <img src="img/Gatehouse School Images/Drawings/3_FloorPlan_Typical.jpg" alt="">
             </div>
 
-            <div class="single-auto-plan img-mb">
+            <div class="single-full-img img-mb">
                 <img src="img/Gatehouse School Images/Drawings/4_Elevations.jpg" alt="">
             </div>
 
-            <div class="single-auto-plan img-mb">
+            <div class="single-full-img img-mb">
                 <img src="img/Gatehouse School Images/Drawings/5_Section_Long.jpg" alt="">
             </div>
 
-            <div class="single-auto-plan img-mb">
+            <div class="single-full-img img-mb">
                 <img src="img/Gatehouse School Images/Drawings/6_Section_Short.jpg" alt="">
             </div>
 
-            <a href="#container-single">
+            <a href="#single-page">
                 <p class="back-top">Back to top</p>
             </a>
 
