--- a/projects.html
+++ b/projects.html
@@ -27,7 +27,7 @@
 
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="header-nav navbar-nav">
-                    <a href="projects.html">
+                    <a href="projects.html" style="font-style: italic;">
                         <li class="nav-item">Projects</li>
                     </a>
                     <a href="practice.html">
@@ -55,7 +55,7 @@
                     <a href="project-single.html">
                         <h2>Gatehouse School</h2>
                     </a>
-                    <h3>Sector</h3>
+                    <h3>Education</h3>
                 </div>
             </div>
 
@@ -66,7 +66,7 @@
                 </div>
                 <div class="col-sm-4 proj-desc left">
                     <h2>Flat Building</h2>
-                    <h3>Sector</h3>
+                    <h3>Education</h3>
                 </div>
             </div>
 
@@ -76,7 +76,7 @@
                 </div>
                 <div class="col-sm-4 proj-desc">
                     <h2>Office</h2>
-                    <h3>Sector</h3>
+                    <h3>Education</h3>
                 </div>
             </div>
         </div>
