--- a/practice.html
+++ b/practice.html
@@ -30,7 +30,7 @@
                     <a href="projects.html">
                         <li class="nav-item">Projects</li>
                     </a>
-                    <a href="practice.html">
+                    <a href="practice.html" style="font-style: italic;">
                         <li class="nav-item">Practice</li>
                     </a>
                     <a href="people.html">
@@ -51,12 +51,14 @@
         <div class="container">
 
             <div class="row">
-                <div class="col-md-5 practice-desc">
+                <div class="col-md-6 pr-5 practice-desc">
                     <h3 class="pb-4">Who are we</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo labore maiores, consectetur
                         doloremque odio reiciendis sequi quasi sunt eos ipsum temporibus a incidunt nisi dolorem ipsam
                         repellat laboriosam ipsa dolores id. Excepturi velit at repudiandae dolore ipsum nisi sapiente
-                        repellendus facere numquam commodi. Tempore tenetur distinctio non vitae minima, molestias
+                        repellendus facere numquam commodi.
+                        <br><br>
+                        Tempore tenetur distinctio non vitae minima, molestias
                         laboriosam? Natus tempora consectetur soluta rerum adipisci obcaecati libero! Fugit culpa sunt
                         facere nihil hic nostrum fugiat iste ex delectus adipisci itaque, doloremque eaque animi.
                         Expedita magnam velit quasi dolor dolore! Quod, quaerat omnis. Sequi ipsum fuga sint natus
@@ -64,13 +66,14 @@
                         ducimus, vitae ad minima porro cumque corrupti expedita, et eligendi, pariatur est ex atque
                         illum tempora vero perferendis blanditiis.</p>
                 </div>
-                <div class="col-md-5 offset-md-2 practice-desc">
+                <div class="col-md-6 pl-md-5 practice-desc">
                     <h3 class="pb-4">What we do</h3>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque, quaerat. Magnam minus tempora
                         accusamus in dolore officiis, vero exercitationem labore corporis quisquam, non, aliquam eius
                         eligendi neque laudantium nisi iusto id possimus sint placeat? Iusto maxime illo neque tempore
                         ducimus aut quibusdam corporis deleniti qui deserunt, quos pariatur dolores aspernatur
-                        dignissimos impedit culpa commodi quo atque similique voluptate dolorem, rem sit ipsa ut! Odio
+                        <br><br>
+                        Dignissimos impedit culpa commodi quo atque similique voluptate dolorem, rem sit ipsa ut! Odio
                         iusto dignissimos eius ipsum libero? Quis voluptate assumenda culpa deleniti inventore minus
                         accusantium, quasi aspernatur quam at ex, quisquam error deserunt vitae, dolores perferendis
                         pariatur maxime ab odio alias in! Laboriosam quas quaerat obcaecati qui omnis voluptas amet
