--- a/contact.html
+++ b/contact.html
@@ -61,10 +61,11 @@
                 </div>
 
                 <div class="contact-social">
-                    <h3>@architectsinpractice</h3>
                     <h3>hello@architectsinpractice.com</h3>
+                    <h3>press@architectsinpractice.com</h3>
 
-                    <h3>Instagram<br>architectsinpractice.com</h3>
+                    <h3>@architectsinpractice</h3>
+                    <h3>architectsinpractice.com</h3>
                     <h5>ARCHITECTS IN PRACTICE is committed to collecting and using personal<br>data responsibly and
                         securely. If you would like to know more about our<br>Privacy Policy, please do get in touch.
                     </h5>
