--- a/people.html
+++ b/people.html
@@ -44,11 +44,11 @@
 
         </header>
 
-        <div class="people-container">
+        <div class="container">
 
             <div class="person-block my-5">
                 <div class="person-img">
-                    <img src="img/ian-new.png" alt="">
+                    <img src="img/Rectangle-Copy-4.png" alt="">
                 </div>
                 <div class="person-info">
                     <h2 class="person-name">Ian Givin</h2>
@@ -63,7 +63,7 @@
             </div>
             <div class="person-block my-5">
                 <div class="person-img">
-                    <img src="img/ian-new.png" alt="">
+                    <img src="img/Rectangle-Copy-5.png" alt="">
                 </div>
                 <div class="person-info">
                     <h2 class="person-name">Ian Givin</h2>
@@ -85,13 +85,18 @@
             <div class="footer-container">
                 <div class="footer-address">
                     <h2>Architects<br>in Practice</h2>
-                    <h3>1 Green Bank Studio, London, E1W<br>+44 7388 XXXXX</h3>
+                    <h3>1 Green Bank Studio<br>London, E1W<br>+44 (0)20 7XX XXXX</h3>
                 </div>
                 <div class="footer-social">
-                    <h3>@architectsinpractice</h3>
-                    <h3>hello@architectsinpractice.com</h3>
-                    <h3>press@architectsinpractice.com</h3>
-                    <h3>architectsinpractice.com</h3>
+                    <div class="footer-email">
+                        <h3>hello@architectsinpractice.com</h3>
+                        <h3>press@architectsinpractice.com</h3>
+                    </div>
+                    <div class="footer-web">
+                        <h3>@architectsinpractice</h3>
+                        <h3>architectsinpractice.com</h3>
+                    </div>
+
                 </div>
             </div>
         </footer>
