--- a/project-single.html
+++ b/project-single.html
@@ -202,13 +202,18 @@
             <div class="footer-container">
                 <div class="footer-address">
                     <h2>Architects<br>in Practice</h2>
-                    <h3>1 Green Bank Studio, London, E1W<br>+44 7388 XXXXX</h3>
+                    <h3>1 Green Bank Studio<br>London, E1W<br>+44 (0)20 7XX XXXX</h3>
                 </div>
                 <div class="footer-social">
-                    <h3>@architectsinpractice</h3>
-                    <h3>hello@architectsinpractice.com</h3>
-                    <h3>press@architectsinpractice.com</h3>
-                    <h3>architectsinpractice.com</h3>
+                    <div class="footer-email">
+                        <h3>hello@architectsinpractice.com</h3>
+                        <h3>press@architectsinpractice.com</h3>
+                    </div>
+                    <div class="footer-web">
+                        <h3>@architectsinpractice</h3>
+                        <h3>architectsinpractice.com</h3>
+                    </div>
+
                 </div>
             </div>
         </footer>
