--- a/projects.html
+++ b/projects.html
@@ -80,17 +80,24 @@
                 </div>
             </div>
         </div>
+
+
         <footer>
             <div class="footer-container">
                 <div class="footer-address">
                     <h2>Architects<br>in Practice</h2>
-                    <h3>1 Green Bank Studio, London, E1W<br>+44 7388 XXXXX</h3>
+                    <h3>1 Green Bank Studio<br>London, E1W<br>+44 (0)20 7XX XXXX</h3>
                 </div>
                 <div class="footer-social">
-                    <h3>@architectsinpractice</h3>
-                    <h3>hello@architectsinpractice.com</h3>
-                    <h3>press@architectsinpractice.com</h3>
-                    <h3>architectsinpractice.com</h3>
+                    <div class="footer-email">
+                        <h3>hello@architectsinpractice.com</h3>
+                        <h3>press@architectsinpractice.com</h3>
+                    </div>
+                    <div class="footer-web">
+                        <h3>@architectsinpractice</h3>
+                        <h3>architectsinpractice.com</h3>
+                    </div>
+
                 </div>
             </div>
         </footer>
@@ -111,7 +118,10 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
+
     <script>
+
         //get the current year of the copyright
         $('#year').text(new Date().getFullYear());
     </script>
