--- a/projects.html
+++ b/projects.html
@@ -70,7 +70,7 @@
                 </div>
             </div>
 
-            <div class="row project-pb">
+            <!-- <div class="row project-pb">
                 <div class="col-sm-8 proj-img">
                     <img src="img/home-img/project-1.jpg" alt="">
                 </div>
@@ -78,7 +78,7 @@
                     <h2>Office</h2>
                     <h3>Education</h3>
                 </div>
-            </div>
+            </div> -->
         </div>
 
 
