--- a/people.html
+++ b/people.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/fontawesome.min.css">
     <link rel="stylesheet" href="css/all.min.css">
-    <title>People | Architects In Practice</title>
+    <title>PEOPLE | ARCHITECTS IN PRACTICE</title>
 </head>
 
 <body>
