--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/fontawesome.min.css">
     <link rel="stylesheet" href="css/all.min.css">
-    <title>Contact | Architects In Practice</title>
+    <title>CONTACT | ARCHITECTS IN PRACTICE</title>
 </head>
 
 <body>
