--- a/practice.html
+++ b/practice.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/fontawesome.min.css">
     <link rel="stylesheet" href="css/all.min.css">
-    <title>Practice | Architects In Practice</title>
+    <title>PRACTICE | ARCHITECTS IN PRACTICE</title>
 </head>
 
 <body>
