--- a/project-single.html
+++ b/project-single.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/fontawesome.min.css">
     <link rel="stylesheet" href="css/all.min.css">
-    <title>Single | Architects In Practice</title>
+    <title>SINGLE | ARCHITECTS IN PRACTICE</title>
 </head>
 
 <body>
