--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/fontawesome.min.css">
     <link rel="stylesheet" href="css/all.min.css">
-    <title>Projects | Architects In Practice</title>
+    <title>PROJECTS | ARCHITECTS IN PRACTICE</title>
 </head>
 
 <body>
