--- a/people.html
+++ b/people.html
@@ -53,12 +53,15 @@
                 <div class="person-info">
                     <h2 class="person-name">Ian Givin</h2>
                     <h2 class="person-title">Director</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, dolorem consequatur aut
-                        non
-                        eos, magni enim quo nobis cum unde dolorum dolore deleniti, facere nesciunt odio quae.
-                        Nesciunt,
-                        odio adipisci laudantium rerum est dolor deleniti quos qui recusandae facere esse, quaerat
-                        necessitatibus nostrum quae eum, autem ipsam impedit cumque vitae.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur consequuntur dignissimos nulla
+                        provident corporis quos incidunt ipsum voluptate repellendus veniam, ducimus fuga animi nesciunt
+                        autem aliquam necessitatibus! Distinctio eveniet vel temporibus impedit odit. Maiores deserunt
+                        quibusdam odio fuga provident, a ipsum libero esse ab laborum aperiam nobis earum eius animi
+                        cupiditate. Et nostrum doloremque non soluta maiores sint quis quae alias.
+                        <br><br>
+                        Voluptatem dolore perspiciatis, omnis cum aliquam sunt numquam! Eaque atque numquam enim, ex
+                        nulla nobis quas
+                        deserunt ea quam amet asperiores vel cum m.</p>
                 </div>
             </div>
             <div class="person-block my-5">
@@ -68,12 +71,15 @@
                 <div class="person-info">
                     <h2 class="person-name">Ian Givin</h2>
                     <h2 class="person-title">Director</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, dolorem consequatur aut
-                        non
-                        eos, magni enim quo nobis cum unde dolorum dolore deleniti, facere nesciunt odio quae.
-                        Nesciunt,
-                        odio adipisci laudantium rerum est dolor deleniti quos qui recusandae facere esse, quaerat
-                        necessitatibus nostrum quae eum, autem ipsam impedit cumque vitae.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur consequuntur dignissimos nulla
+                        provident corporis quos incidunt ipsum voluptate repellendus veniam, ducimus fuga animi nesciunt
+                        autem aliquam necessitatibus! Distinctio eveniet vel temporibus impedit odit. Maiores deserunt
+                        quibusdam odio fuga provident, a ipsum libero esse ab laborum aperiam nobis earum eius animi
+                        cupiditate. Et nostrum doloremque non soluta maiores sint quis quae alias.
+                        <br><br>
+                        Voluptatem dolore perspiciatis, omnis cum aliquam sunt numquam! Eaque atque numquam enim, ex
+                        nulla nobis quas
+                        deserunt ea quam amet asperiores vel cum m.</p>
                 </div>
             </div>
 
@@ -81,7 +87,7 @@
 
         </div>
 
-        <footer>
+        <footer id="footer">
             <div class="footer-container">
                 <div class="footer-address">
                     <h2>Architects<br>in Practice</h2>
@@ -119,6 +125,8 @@
         $('#year').text(new Date().getFullYear());
     </script>
     <script src="js/main.js"></script>
+    <!-- <script src="js/smoothscroll.js"></script> -->
+
 </body>
 
 </html>
