--- a/practice.html
+++ b/practice.html
@@ -123,6 +123,7 @@
     </script>
     <script src="js/main.js"></script>
     <script src="js/scrollDown.js"></script>
+    <!-- <script src="js/smoothscroll.js"></script> -->
 </body>
 
 </html>
