--- a/projects.html
+++ b/projects.html
@@ -16,6 +16,7 @@
 <body>
 
     <div class="project-page">
+
         <header class="navbar navbar-expand-sm navbar-light">
             <a href="index.html" class="navbar-brand">
                 <h1 class="header-brand">Architects<br>In Practice</h1>
@@ -65,20 +66,22 @@
                     <img src="img/home-img/project-2.jpg" alt="">
                 </div>
                 <div class="col-sm-4 proj-desc left">
-                    <h2>Flat Building</h2>
+                    <a href="project-single.html">
+                        <h2>Flat Building</h2>
+                    </a>
                     <h3>Education</h3>
                 </div>
             </div>
 
             <!-- <div class="row project-pb">
-                <div class="col-sm-8 proj-img">
-                    <img src="img/home-img/project-1.jpg" alt="">
-                </div>
-                <div class="col-sm-4 proj-desc">
-                    <h2>Office</h2>
-                    <h3>Education</h3>
-                </div>
-            </div> -->
+                        <div class="col-sm-8 proj-img">
+                            <img src="img/home-img/project-1.jpg" alt="">
+                        </div>
+                        <div class="col-sm-4 proj-desc">
+                            <h2>Office</h2>
+                            <h3>Education</h3>
+                        </div>
+                    </div> -->
         </div>
 
 
@@ -101,6 +104,8 @@
                 </div>
             </div>
         </footer>
+
+
     </div>
 
 
@@ -126,6 +131,8 @@
         $('#year').text(new Date().getFullYear());
     </script>
     <script src="js/main.js"></script>
+    <!-- <script src="js/SmoothScroll.js"></script> -->
+    <script src="js/smoothscroll.js"></script>
 </body>
 
 </html>
