--- a/project-single.html
+++ b/project-single.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/fontawesome.min.css">
     <link rel="stylesheet" href="css/all.min.css">
@@ -16,6 +17,7 @@
 <body>
 
     <div class="single-page" id="single-page">
+
         <header class="navbar navbar-expand-sm navbar-light fixed-top">
             <a href="index.html" class="navbar-brand">
                 <h1 class="header-brand">Architects<br>In Practice</h1>
@@ -62,20 +64,32 @@
 
             <div class="single-desc row">
                 <div class="col-lg-6">
-                    <p class="description">Gatehouse School is the dramatic transformation of an independent primary
+                    <p class="description">Gatehouse School is the dramatic transformation of an independent
+                        primary
                         school in
                         inner-city
-                        East London, originally built in 1901. Comprising a vertical expansion and extensive internal
-                        refurbishment that are both complementary to the charm of the original building, this intricate
-                        project was the imaginative response to a series of thwarted attempts by the school to purchase
+                        East London, originally built in 1901. Comprising a vertical expansion and extensive
+                        internal
+                        refurbishment that are both complementary to the charm of the original building, this
+                        intricate
+                        project was the imaginative response to a series of thwarted attempts by the school to
+                        purchase
                         adjacent land in order to expand.
                         <br><br>
-                        The project demonstrates a maximisation of space that was strongly supported from the outset by
-                        Tower Hamlets Council. The ambitious design has allowed the school to cater for a growing
-                        waiting list by expanding from two to three form entry and provides a series of outstanding new
-                        facilities. This includes 15 new classrooms, a flexible performance space, reception, music
-                        suites, library, kitchen, additional hall space and a consolidated nursery centre. The project
-                        was delivered significantly ahead of schedule – all without disrupting the school’s day-to-day
+                        The project demonstrates a maximisation of space that was strongly supported from the
+                        outset
+                        by
+                        Tower Hamlets Council. The ambitious design has allowed the school to cater for a
+                        growing
+                        waiting list by expanding from two to three form entry and provides a series of
+                        outstanding
+                        new
+                        facilities. This includes 15 new classrooms, a flexible performance space, reception,
+                        music
+                        suites, library, kitchen, additional hall space and a consolidated nursery centre. The
+                        project
+                        was delivered significantly ahead of schedule – all without disrupting the school’s
+                        day-to-day
                         operations.
                         <br><br>
                         Ian Givin was Project Architect for Gatehouse School at Child Graddon Lewis.
@@ -144,15 +158,15 @@
                 <img src="img/Gatehouse School Images/Photos/GatehouseSchool_06.jpg" alt="">
             </div>
 
-            <div class="single-auto-img img-mb">
+            <div class="single-square-img img-mb">
                 <img src="img/Gatehouse School Images/Photos/GatehouseSchool_07.jpg" alt="">
             </div>
 
-            <div class="single-auto-img img-mb">
+            <div class="single-square-img img-mb">
                 <img src="img/Gatehouse School Images/Photos/GatehouseSchool_08.jpg" alt="">
             </div>
 
-            <div class="single-auto-img img-mb">
+            <div class="single-square-img img-mb">
                 <img src="img/Gatehouse School Images/Photos/GatehouseSchool_09.jpg" alt="">
             </div>
 
@@ -168,7 +182,7 @@
                 <img src="img/Gatehouse School Images/Photos/GatehouseSchool_12.jpg" alt="">
             </div>
 
-            <div class="single-auto-img img-mb">
+            <div class="single-square-img img-mb">
                 <img src="img/Gatehouse School Images/Drawings/1_LocationPlan.jpg" alt="">
             </div>
 
@@ -219,8 +233,6 @@
         </footer>
 
 
-
-
     </div>
 
 
@@ -240,8 +252,15 @@
         crossorigin="anonymous"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
 
+
+
     <script src="js/main.js"></script>
     <script src="js/scrollDown.js"></script>
+    <!-- <script src="js/smoothscroll.js"></script> -->
+
+
+
+
 </body>
 
 </html>
