contact and footer

--- a/contact.html
+++ b/contact.html
@@ -53,27 +53,41 @@
             </a>
             <div class="contact-info">
                 <div class="contact-address">
-                    <h2>Architects<br>In Practice</h2>
-                    <h3>1 Green Bank Studio, London, E1W<br>+44 (0)20 7XX XXXX</h3>
-                    <h5>ARCHITECTS IN PRACTICE LTD Registered in England No. 12463381
-                    </h5>
-                    <h5>&copy; 2020, ARCHITECTS IN PRACTICE, All Rights Reserved</h5>
+                    <h2>Architects<br>in Practice</h2>
+                    <h3>1 Green Bank Studio</h3>
+                    <h3>London, E1W</h3>
+                    <h3>+44 (0)20 7XX XXXX</h3>
+                    <p>ARCHITECTS IN PRACTICE LTD</p>
+                    <p>Registered in England No. 12463381</p>
                 </div>
 
                 <div class="contact-social">
-                    <h3>hello@architectsinpractice.com</h3>
-                    <h3>press@architectsinpractice.com</h3>
+                    <div class="contact-email">
+                        <a href="#">
+                            <h3>hello@architectsinpractice.com</h3>
+                        </a>
+                        <a href="#">
+                            <h3>press@architectsinpractice.com</h3>
+                        </a>
+                    </div>
+                    <div class="contact-web">
+                        <a href="#">
+                            <h3>@architectsinpractice</h3>
+                        </a>
+                        <a href="#">
+                            <h3>architectsinpractice.com</h3>
+                        </a>
 
-                    <h3>@architectsinpractice</h3>
-                    <h3>architectsinpractice.com</h3>
-                    <h5>ARCHITECTS IN PRACTICE is committed to collecting and using personal<br>data responsibly and
-                        securely. If you would like to know more about our<br>Privacy Policy, please do get in touch.
-                    </h5>
+                    </div>
+                    <div class="contact-rights">
+                        <p>2020, ARCHITECTS IN PRACTICE, All Rights Reserved</p>
+                        <p>We are committed to collecting and using personal data</p>
+                        <p>responsibly and securely. If you would like to know more</p>
+                        <p>about our Privacy Policy, please do get in touch.</p>
+                    </div>
                 </div>
             </div>
         </div>
-
-
 
     </div>
 
