--- a/people.html
+++ b/people.html
@@ -87,11 +87,13 @@
 
         </div>
 
-        <footer id="footer">
+        <footer>
             <div class="footer-container">
                 <div class="footer-address">
                     <h2>Architects<br>in Practice</h2>
-                    <h3>1 Green Bank Studio<br>London, E1W<br>+44 (0)20 7XX XXXX</h3>
+                    <h3>1 Green Bank Studio</h3>
+                    <h3>London, E1W</h3>
+                    <h3>+44 (0)20 7XX XXXX</h3>
                 </div>
                 <div class="footer-social">
                     <div class="footer-email">
@@ -101,6 +103,7 @@
                     <div class="footer-web">
                         <h3>@architectsinpractice</h3>
                         <h3>architectsinpractice.com</h3>
+                        <p>2020 ARCHITECTS IN PRACTICE, All Rights Reserved</p>
                     </div>
 
                 </div>
