--- a/projects.html
+++ b/projects.html
@@ -89,7 +89,9 @@
             <div class="footer-container">
                 <div class="footer-address">
                     <h2>Architects<br>in Practice</h2>
-                    <h3>1 Green Bank Studio<br>London, E1W<br>+44 (0)20 7XX XXXX</h3>
+                    <h3>1 Green Bank Studio</h3>
+                    <h3>London, E1W</h3>
+                    <h3>+44 (0)20 7XX XXXX</h3>
                 </div>
                 <div class="footer-social">
                     <div class="footer-email">
@@ -99,6 +101,7 @@
                     <div class="footer-web">
                         <h3>@architectsinpractice</h3>
                         <h3>architectsinpractice.com</h3>
+                        <p>2020 ARCHITECTS IN PRACTICE, All Rights Reserved</p>
                     </div>
 
                 </div>
@@ -131,7 +134,6 @@
         $('#year').text(new Date().getFullYear());
     </script>
     <script src="js/main.js"></script>
-    <!-- <script src="js/SmoothScroll.js"></script> -->
     <script src="js/smoothscroll.js"></script>
 </body>
 
