footer contact changes

--- a/people.html
+++ b/people.html
@@ -89,25 +89,58 @@
 
         <footer>
             <div class="footer-container">
-                <div class="footer-address">
-                    <h2>Architects<br>in Practice</h2>
-                    <h3>1 Green Bank Studio</h3>
-                    <h3>London, E1W</h3>
-                    <h3>+44 (0)20 7XX XXXX</h3>
-                </div>
-                <div class="footer-social">
-                    <div class="footer-email">
-                        <h3>hello@architectsinpractice.com</h3>
-                        <h3>press@architectsinpractice.com</h3>
+                <div class="contact-info">
+
+                    <div class="contact-address">
+                        <h2>Architects<br>in Practice</h2>
+                        <h3>1 Green Bank Studio</h3>
+                        <h3>London, E1W</h3>
+                        <h3>+44 (0)20 7XX XXXX</h3>
                     </div>
-                    <div class="footer-web">
-                        <h3>@architectsinpractice</h3>
-                        <h3>architectsinpractice.com</h3>
-                        <p>2020 ARCHITECTS IN PRACTICE, All Rights Reserved</p>
+
+                    <div class="footer-registered">
+                        <p>ARCHITECTS IN PRACTICE LTD</p>
+                        <p>Registered in England No. 12463381</p>
+                    </div>
+
+                </div>
+
+                <div class="contact-social">
+
+                    <div class="contact-social-container">
+                        <div class="contact-email">
+                            <a href="#">
+                                <h3>hello@architectsinpractice.com</h3>
+                            </a>
+                            <a href="#">
+                                <h3>press@architectsinpractice.com</h3>
+                            </a>
+                        </div>
+
+                        <div class="contact-web">
+                            <a href="#">
+                                <h3>@architectsinpractice</h3>
+                            </a>
+                            <a href="#">
+                                <h3>architectsinpractice.com</h3>
+                            </a>
+                        </div>
+
+                        <div class="footer-rights">
+                            <p>&copy; 2020 ARCHITECTS IN PRACTICE, All Rights Reserved</p>
+                        </div>
+                    </div>
+
+
+                    <div class="footer-data">
+                        <p>We are committed to collecting and using personal data</p>
+                        <p>responsibly and securely. If you would like to know more</p>
+                        <p>about our Privacy Policy, please do get in touch.</p>
                     </div>
 
                 </div>
             </div>
+
         </footer>
 
     </div>
