--- a/project-single.html
+++ b/project-single.html
@@ -29,7 +29,7 @@
 
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="header-nav navbar-nav">
-                    <a href="projects.html" style="font-style: italic;">
+                    <a href="projects.html">
                         <li class="nav-item">Projects</li>
                     </a>
                     <a href="practice.html">
@@ -48,7 +48,8 @@
 
 
         <div class="showcase">
-            <img src="img/Gatehouse School Images/Photos/GatehouseSchool_04.jpg" alt="">
+            <img src="img/fullscreentest.jpg" alt="">
+            <!-- <img src="img/Gatehouse School Images/Photos/GatehouseSchool_04.jpg" alt=""> -->
             <a href="#container-single">
                 <h2 class="title">Gatehouse School</h2>
             </a>
@@ -214,25 +215,58 @@
 
         <footer>
             <div class="footer-container">
-                <div class="footer-address">
-                    <h2>Architects<br>in Practice</h2>
-                    <h3>1 Green Bank Studio</h3>
-                    <h3>London, E1W</h3>
-                    <h3>+44 (0)20 7XX XXXX</h3>
-                </div>
-                <div class="footer-social">
-                    <div class="footer-email">
-                        <h3>hello@architectsinpractice.com</h3>
-                        <h3>press@architectsinpractice.com</h3>
+                <div class="contact-info">
+
+                    <div class="contact-address">
+                        <h2>Architects<br>in Practice</h2>
+                        <h3>1 Green Bank Studio</h3>
+                        <h3>London, E1W</h3>
+                        <h3>+44 (0)20 7XX XXXX</h3>
                     </div>
-                    <div class="footer-web">
-                        <h3>@architectsinpractice</h3>
-                        <h3>architectsinpractice.com</h3>
-                        <p>2020 ARCHITECTS IN PRACTICE, All Rights Reserved</p>
+
+                    <div class="footer-registered">
+                        <p>ARCHITECTS IN PRACTICE LTD</p>
+                        <p>Registered in England No. 12463381</p>
+                    </div>
+
+                </div>
+
+                <div class="contact-social">
+
+                    <div class="contact-social-container">
+                        <div class="contact-email">
+                            <a href="#">
+                                <h3>hello@architectsinpractice.com</h3>
+                            </a>
+                            <a href="#">
+                                <h3>press@architectsinpractice.com</h3>
+                            </a>
+                        </div>
+
+                        <div class="contact-web">
+                            <a href="#">
+                                <h3>@architectsinpractice</h3>
+                            </a>
+                            <a href="#">
+                                <h3>architectsinpractice.com</h3>
+                            </a>
+                        </div>
+
+                        <div class="footer-rights">
+                            <p>&copy; 2020 ARCHITECTS IN PRACTICE, All Rights Reserved</p>
+                        </div>
+                    </div>
+
+
+                    <div class="footer-data">
+                        <p>We are committed to collecting and using personal data</p>
+                        <p>responsibly and securely. If you would like to know more</p>
+                        <p>about our Privacy Policy, please do get in touch.</p>
                     </div>
 
                 </div>
             </div>
+
         </footer>
 
 
