map change, fade img

--- a/project-single.html
+++ b/project-single.html
@@ -48,8 +48,6 @@
 
 
         <div class="showcase">
-            <img src="img/fullscreentest.jpg" alt="">
-            <!-- <img src="img/Gatehouse School Images/Photos/GatehouseSchool_04.jpg" alt=""> -->
             <a href="#container-single">
                 <h2 class="title">Gatehouse School</h2>
             </a>
@@ -136,75 +134,75 @@
 
 
             <div class="single-full-img img-mb">
-                <img src="img/Gatehouse School Images/Photos/GatehouseSchool_01.jpg" alt="">
+                <img src="img/Gatehouse-School-Images/Photos/GatehouseSchool_01.jpg" alt="">
             </div>
 
             <div class="single-auto-img img-mb">
-                <img src="img/Gatehouse School Images/Photos/GatehouseSchool_02.jpg" alt="">
+                <img src="img/Gatehouse-School-Images/Photos/GatehouseSchool_02.jpg" alt="">
             </div>
 
             <div class="single-full-img img-mb">
-                <img src="img/Gatehouse School Images/Photos/GatehouseSchool_03.jpg" alt="">
+                <img src="img/Gatehouse-School-Images/Photos/GatehouseSchool_03.jpg" alt="">
             </div>
 
             <div class="single-full-img img-mb">
-                <img src="img/Gatehouse School Images/Photos/GatehouseSchool_04.jpg" alt="">
+                <img src="img/Gatehouse-School-Images/Photos/GatehouseSchool_04.jpg" alt="">
             </div>
 
             <div class="single-full-img img-mb">
-                <img src="img/Gatehouse School Images/Photos/GatehouseSchool_05.jpg" alt="">
+                <img src="img/Gatehouse-School-Images/Photos/GatehouseSchool_05.jpg" alt="">
             </div>
 
             <div class="single-full-img img-mb">
-                <img src="img/Gatehouse School Images/Photos/GatehouseSchool_06.jpg" alt="">
+                <img src="img/Gatehouse-School-Images/Photos/GatehouseSchool_06.jpg" alt="">
             </div>
 
             <div class="single-square-img img-mb">
-                <img src="img/Gatehouse School Images/Photos/GatehouseSchool_07.jpg" alt="">
+                <img src="img/Gatehouse-School-Images/Photos/GatehouseSchool_07.jpg" alt="">
             </div>
 
             <div class="single-square-img img-mb">
-                <img src="img/Gatehouse School Images/Photos/GatehouseSchool_08.jpg" alt="">
+                <img src="img/Gatehouse-School-Images/Photos/GatehouseSchool_08.jpg" alt="">
             </div>
 
             <div class="single-square-img img-mb">
-                <img src="img/Gatehouse School Images/Photos/GatehouseSchool_09.jpg" alt="">
+                <img src="img/Gatehouse-School-Images/Photos/GatehouseSchool_09.jpg" alt="">
             </div>
 
             <div class="single-full-img img-mb">
-                <img src="img/Gatehouse School Images/Photos/GatehouseSchool_10.jpg" alt="">
+                <img src="img/Gatehouse-School-Images/Photos/GatehouseSchool_10.jpg" alt="">
             </div>
 
             <div class="single-full-img img-mb">
-                <img src="img/Gatehouse School Images/Photos/GatehouseSchool_11.jpg" alt="">
+                <img src="img/Gatehouse-School-Images/Photos/GatehouseSchool_11.jpg" alt="">
             </div>
 
             <div class="single-full-img img-mb">
-                <img src="img/Gatehouse School Images/Photos/GatehouseSchool_12.jpg" alt="">
+                <img src="img/Gatehouse-School-Images/Photos/GatehouseSchool_12.jpg" alt="">
             </div>
 
             <div class="single-square-img img-mb">
-                <img src="img/Gatehouse School Images/Drawings/1_LocationPlan.jpg" alt="">
+                <img src="img/Gatehouse-School-Images/Drawings/1_LocationPlan.jpg" alt="">
             </div>
 
             <div class="single-full-img img-mb">
-                <img src="img/Gatehouse School Images/Drawings/2_FloorPlan_Ground.jpg" alt="">
+                <img src="img/Gatehouse-School-Images/Drawings/2_FloorPlan_Ground.jpg" alt="">
             </div>
 
             <div class="single-full-img img-mb">
-                <img src="img/Gatehouse School Images/Drawings/3_FloorPlan_Typical.jpg" alt="">
+                <img src="img/Gatehouse-School-Images/Drawings/3_FloorPlan_Typical.jpg" alt="">
             </div>
 
             <div class="single-full-img img-mb">
-                <img src="img/Gatehouse School Images/Drawings/4_Elevations.jpg" alt="">
+                <img src="img/Gatehouse-School-Images/Drawings/4_Elevations.jpg" alt="">
             </div>
 
             <div class="single-full-img img-mb">
-                <img src="img/Gatehouse School Images/Drawings/5_Section_Long.jpg" alt="">
+                <img src="img/Gatehouse-School-Images/Drawings/5_Section_Long.jpg" alt="">
             </div>
 
             <div class="single-full-img img-mb">
-                <img src="img/Gatehouse School Images/Drawings/6_Section_Short.jpg" alt="">
+                <img src="img/Gatehouse-School-Images/Drawings/6_Section_Short.jpg" alt="">
             </div>
 
             <a href="#single-page">
