--- a/projects.html
+++ b/projects.html
@@ -49,7 +49,7 @@
 
             <div class="row project-pb">
                 <div class="col-sm-8 proj-img">
-                    <a href="project-single.html"><img src="img/Gatehouse School Images/Photos/GatehouseSchool_03.jpg"
+                    <a href="project-single.html"><img src="img/Gatehouse-School-Images/Photos/GatehouseSchool_03.jpg"
                             alt=""></a>
                 </div>
                 <div class="col-sm-4 proj-desc right">
@@ -63,7 +63,7 @@
             <div class="row project-pb">
 
                 <div class="col-sm-8 proj-img order-sm-last">
-                    <img src="img/home-img/project-2.jpg" alt="">
+                    <img src="img/home-img/desktop/project-2.jpg" alt="">
                 </div>
                 <div class="col-sm-4 proj-desc left">
                     <a href="project-single.html">
