--- a/contact.html
+++ b/contact.html
@@ -44,72 +44,78 @@
 
         </header>
 
-        <div class="contact-content">
-            <div class="map">
-                <a href="https://www.google.com/maps/place/1+Green+Bank,+Wapping,+London+E1W+2PA,+UK/@51.5042128,-0.0634431,17z/data=!3m1!4b1!4m5!3m4!1s0x4876033a815165bd:0xe498a1780cc3fefd!8m2!3d51.5042128!4d-0.0612544"
-                    target="_blank">
-                    <img src="img/LocationMap.png" alt=""></a>
-            </div>
-            </a>
-            <footer>
-                <div class="footer-container">
-                    <div class="contact-info">
-
-                        <div class="contact-address">
-                            <h2>Architects<br>in Practice</h2>
-                            <h3>1 Green Bank Studio</h3>
-                            <h3>London, E1W</h3>
-                            <h3>+44 (0)20 7XX XXXX</h3>
-                        </div>
-
-                        <div class="footer-registered">
-                            <p>ARCHITECTS IN PRACTICE LTD</p>
-                            <p>Registered in England No. 12463381</p>
-                        </div>
-
+        <div class="contact-container">
+            <div class="contact-width-container">
+                <div class="contact-content">
+                    <div class="map">
+                        <a href="https://www.google.com/maps/place/1+Green+Bank,+Wapping,+London+E1W+2PA,+UK/@51.5042128,-0.0634431,17z/data=!3m1!4b1!4m5!3m4!1s0x4876033a815165bd:0xe498a1780cc3fefd!8m2!3d51.5042128!4d-0.0612544"
+                            target="_blank">
+                            <img src="img/LocationMap_6000x4000.jpg" alt=""></a>
                     </div>
+                    </a>
+                    <footer>
+                        <div class="footer-container">
+                            <div class="contact-info">
 
-                    <div class="contact-social">
+                                <div class="contact-address">
+                                    <h2>Architects<br>in Practice</h2>
+                                    <h3>1 Green Bank Studio</h3>
+                                    <h3>London, E1W</h3>
+                                    <h3>+44 (0)20 7XX XXXX</h3>
+                                </div>
 
-                        <div class="contact-social-container">
-                            <div class="contact-email">
-                                <a href="#">
-                                    <h3>hello@architectsinpractice.com</h3>
-                                </a>
-                                <a href="#">
-                                    <h3>press@architectsinpractice.com</h3>
-                                </a>
+                                <div class="footer-registered">
+                                    <p>ARCHITECTS IN PRACTICE LTD</p>
+                                    <p>Registered in England No. 12463381</p>
+                                </div>
+
                             </div>
 
-                            <div class="contact-web">
-                                <a href="#">
-                                    <h3>@architectsinpractice</h3>
-                                </a>
-                                <a href="#">
-                                    <h3>architectsinpractice.com</h3>
-                                </a>
-                            </div>
+                            <div class="contact-social">
 
-                            <div class="footer-rights">
-                                <p>&copy; 2020 ARCHITECTS IN PRACTICE, All Rights Reserved</p>
+                                <div class="contact-social-container">
+                                    <div class="contact-email">
+                                        <a href="#">
+                                            <h3>hello@architectsinpractice.com</h3>
+                                        </a>
+                                        <a href="#">
+                                            <h3>press@architectsinpractice.com</h3>
+                                        </a>
+                                    </div>
+
+                                    <div class="contact-web">
+                                        <a href="#">
+                                            <h3>@architectsinpractice</h3>
+                                        </a>
+                                        <a href="#">
+                                            <h3>architectsinpractice.com</h3>
+                                        </a>
+                                    </div>
+
+                                    <div class="footer-rights">
+                                        <p>&copy; 2020 ARCHITECTS IN PRACTICE, All Rights Reserved</p>
+                                    </div>
+                                </div>
+
+
+                                <div class="footer-data">
+                                    <p>We are committed to collecting and using personal data</p>
+                                    <p>responsibly and securely. If you would like to know more</p>
+                                    <p>about our Privacy Policy, please do get in touch.</p>
+                                </div>
+
                             </div>
                         </div>
 
+                    </footer>
 
-                        <div class="footer-data">
-                            <p>We are committed to collecting and using personal data</p>
-                            <p>responsibly and securely. If you would like to know more</p>
-                            <p>about our Privacy Policy, please do get in touch.</p>
-                        </div>
 
-                    </div>
+
                 </div>
-
-            </footer>
-
-
+            </div>
 
         </div>
+
 
     </div>
 
