--- a/contact.html
+++ b/contact.html
@@ -45,8 +45,8 @@
         </header>
 
         <div class="contact-container">
-            <div class="contact-width-container">
-                <div class="contact-content">
+            <div class="contact-width-container row">
+                <div class="contact-content col-sm-8">
                     <div class="map">
                         <a href="https://www.google.com/maps/place/1+Green+Bank,+Wapping,+London+E1W+2PA,+UK/@51.5042128,-0.0634431,17z/data=!3m1!4b1!4m5!3m4!1s0x4876033a815165bd:0xe498a1780cc3fefd!8m2!3d51.5042128!4d-0.0612544"
                             target="_blank">
