--- a/practice.html
+++ b/practice.html
@@ -44,8 +44,8 @@
 
         </header>
 
-        <div class="showcase">
-            <img src="img/practice.png" alt="">
+        <div class="practice-showcase">
+
         </div>
 
         <div class="container">
