ipad and mobile

--- a/people.html
+++ b/people.html
@@ -46,7 +46,7 @@
 
         <div class="container">
 
-            <div class="person-block my-5">
+            <div class="person-block mb-sm-5">
                 <div class="person-img">
                     <img src="img/Rectangle-Copy-4.png" alt="">
                 </div>
@@ -64,7 +64,7 @@
                         deserunt ea quam amet asperiores vel cum m.</p>
                 </div>
             </div>
-            <div class="person-block my-5">
+            <div class="person-block mb-sm-5">
                 <div class="person-img">
                     <img src="img/Rectangle-Copy-5.png" alt="">
                 </div>
