--- a/practice.html
+++ b/practice.html
@@ -51,8 +51,8 @@
         <div class="container">
 
             <div class="row">
-                <div class="col-md-6 pr-5 practice-desc">
-                    <h3 class="pb-4">Who are we</h3>
+                <div class="col-lg-6 pr-lg-5 practice-desc">
+                    <h3 class="pb-lg-4">Who are we</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo labore maiores, consectetur
                         doloremque odio reiciendis sequi quasi sunt eos ipsum temporibus a incidunt nisi dolorem ipsam
                         repellat laboriosam ipsa dolores id. Excepturi velit at repudiandae dolore ipsum nisi sapiente
@@ -66,8 +66,8 @@
                         ducimus, vitae ad minima porro cumque corrupti expedita, et eligendi, pariatur est ex atque
                         illum tempora vero perferendis blanditiis.</p>
                 </div>
-                <div class="col-md-6 pl-md-5 practice-desc">
-                    <h3 class="pb-4">What we do</h3>
+                <div class="col-lg-6 pl-lg-5 practice-desc">
+                    <h3 class="pb-lg-4">What we do</h3>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque, quaerat. Magnam minus tempora
                         accusamus in dolore officiis, vero exercitationem labore corporis quisquam, non, aliquam eius
                         eligendi neque laudantium nisi iusto id possimus sint placeat? Iusto maxime illo neque tempore
