navbar dropdown change

--- a/contact.html
+++ b/contact.html
@@ -16,32 +16,37 @@
 <body>
 
     <div class="contact-page">
-        <header class="navbar navbar-expand-sm navbar-light fixed-top">
-            <a href="index.html" class="navbar-brand">
-                <h1 class="header-brand">Architects<br>In Practice</h1>
+        <header>
+            <a href="index.html">
+                <h1 class="brand">Architects<br>In Practice</h1>
             </a>
 
-            <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarCollapse">
-                <ul class="header-nav navbar-nav">
-                    <a href="projects.html">
-                        <li class="nav-item">Projects</li>
-                    </a>
-                    <a href="practice.html">
-                        <li class="nav-item">Practice</li>
-                    </a>
-                    <a href="people.html">
-                        <li class="nav-item">People</li>
-                    </a>
-                    <a href="contact.html" style="font-style: italic;">
-                        <li class="nav-item">Contact</li>
-                    </a>
-                </ul>
+            <div class="menu-toggle" id="menu-toggle">
+                <img src="img/open-grey.svg" alt="">
             </div>
 
+            <nav>
+                <a href="index.html">
+                    <h1 class="brand nav-brand">Architects<br>In Practice</h1>
+                </a>
+                <div class="menu-toggle" id="menu-toggle">
+                    <img src="img/X.svg" alt="">
+                </div>
+                <ul class="nav-list">
+                    <a href="projects.html">
+                        <li class="nav-list-item">Projects</li>
+                    </a>
+                    <a href="practice.html">
+                        <li class="nav-list-item">Practice</li>
+                    </a>
+                    <a href="people.html">
+                        <li class="nav-list-item">People</li>
+                    </a>
+                    <a href="contact.html" style="font-style: italic;">
+                        <li class="nav-list-item">Contact</li>
+                    </a>
+                </ul>
+            </nav>
         </header>
 
         <div class="contact-container">
@@ -102,6 +107,11 @@
                                     <p>We are committed to collecting and using personal data</p>
                                     <p>responsibly and securely. If you would like to know more</p>
                                     <p>about our Privacy Policy, please do get in touch.</p>
+                                </div>
+
+                                <div class="footer-registered-mobile">
+                                    <p>ARCHITECTS IN PRACTICE LTD</p>
+                                    <p>Registered in England No. 12463381</p>
                                 </div>
 
                             </div>
