--- a/index.html
+++ b/index.html
@@ -16,32 +16,37 @@
 <body>
 
     <div class="home-container" id="home-container">
-        <header class="navbar navbar-expand-sm navbar-light">
-            <a href="index.html" class="navbar-brand">
-                <h1 class="header-brand">Architects<br>In Practice</h1>
+        <header>
+            <a href="index.html">
+                <h1 class="brand">Architects<br>In Practice</h1>
             </a>
 
-            <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarCollapse">
-                <ul class="header-nav navbar-nav">
-                    <a href="projects.html">
-                        <li class="nav-item">Projects</li>
-                    </a>
-                    <a href="practice.html">
-                        <li class="nav-item">Practice</li>
-                    </a>
-                    <a href="people.html">
-                        <li class="nav-item">People</li>
-                    </a>
-                    <a href="contact.html">
-                        <li class="nav-item">Contact</li>
-                    </a>
-                </ul>
+            <div class="menu-toggle" id="menu-toggle">
+                <img src="img/open-white.svg" alt="">
             </div>
 
+            <nav>
+                <a href="index.html">
+                    <h1 class="brand nav-brand">Architects<br>In Practice</h1>
+                </a>
+                <div class="menu-toggle" id="menu-toggle">
+                    <img src="img/X.svg" alt="">
+                </div>
+                <ul class="nav-list">
+                    <a href="projects.html">
+                        <li class="nav-list-item">Projects</li>
+                    </a>
+                    <a href="practice.html">
+                        <li class="nav-list-item">Practice</li>
+                    </a>
+                    <a href="people.html">
+                        <li class="nav-list-item">People</li>
+                    </a>
+                    <a href="contact.html">
+                        <li class="nav-list-item">Contact</li>
+                    </a>
+                </ul>
+            </nav>
         </header>
 
         <h1 class=" title" id="home-title"></h1>
