--- a/practice.html
+++ b/practice.html
@@ -50,7 +50,9 @@
             </nav>
         </header>
 
-        <div class="practice-showcase"></div>
+        <div class="practice-showcase">
+            <div class="practice-showcase-overlay"></div>
+        </div>
 
         <div class="container">
 
