main image change

--- a/projects/america-square.html
+++ b/projects/america-square.html
@@ -35,7 +35,7 @@
                     <img src="../img/X.svg" alt="">
                 </div>
                 <ul class="nav-list">
-                    <a href="../projects.html" style="font-style: italic;">
+                    <a href="../projects.html">
                         <li class="nav-list-item">Projects</li>
                     </a>
                     <a href="../practice.html">
