header color change

--- a/projects/ossory.html
+++ b/projects/ossory.html
@@ -18,7 +18,7 @@
 
     <div class="single-page" id="single-page">
 
-        <header>
+        <header class="dark">
             <a href="../index.html">
                 <h1 class="brand">Architects<br>In Practice</h1>
             </a>
